package edu.miu.simpleshop.domain;



public class Admin {
    private User user;
    private Long id;

    public Admin(){}

    public User getUser() {
        return user;
    }

    public void setUser(User user) {
        this.user = user;
    }
}

