package edu.miu.simpleshop.domain;


public class BillingInfo {


}
