package edu.miu.simpleshop.domain.enums;


public enum OrderStatus {
    CREATED, SHIPPED, DELIVERED, CANCELLED
}