create table Role (id int(10), name varchar (100));
insert into Role (id, name) values(1, 'ADMIN');
insert into Role (id, name) values(2, 'BUYER');
insert into Role (id, name) values(3, 'SELLER');


